--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "./",
   "private": true,
   "dependencies": {
+    "@bem-react/classname": "^1.5.12",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -15,7 +16,8 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "sass": "^1.52.1"
   },
   "scripts": {
     "start": "react-scripts start",
