--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,20 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.DS_STORE
+jspm_packages/
+node_modules/
+*.sublime-project
+*.sublime-workspace
+.idea
+*.iml
+.vscode
+*.swp
+*.swo
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+bower_components
+
+.npm
