--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "classnames": "^2.3.1",
+    "nanoid": "^3.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "sass": "^1.52.1"
