--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "classnames": "^2.3.1",
+    "date-fns": "^2.29.2",
     "nanoid": "^3.3.4",
     "rc-slider": "^10.0.0",
     "react": "^17.0.2",
+    "react-day-picker": "^8.1.4",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.3.0",
