--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.29.2",
     "nanoid": "^3.3.4",
+    "qs": "^6.11.0",
     "rc-slider": "^10.0.0",
     "react": "^17.0.2",
     "react-day-picker": "^8.1.4",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.34.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.3.0",
     "react-router-hash-link": "^2.4.3",
