--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.34.2",
     "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "5.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
