--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,7 +14,7 @@ install:
 build: off
 
 build_script:
-  - CI=false yarn build # команда сборки
+  - yarn build # команда сборки
 
 # test_script:
 # - yarn lint && yarn test # скрипт тестирования
